[MODFISTO-460] Removed the old transaction API (#408)